fix(component/option-card): update the z-index values of the component elements (#1319)

--- a/src/docs/Components/OptionGroup/OptionCard/previews/product.preview.scss
+++ b/src/docs/Components/OptionGroup/OptionCard/previews/product.preview.scss
@@ -50,7 +50,3 @@
 .hide-button {
   display: none;
 }
-
-#exampleButton {
-  z-index: 10;
-}
